--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -36,7 +36,9 @@
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <img src="media/img/Logo Horizontal.png" alt="logo">
+                    <a href="index.html#home">
+                        <img src="media\img\Logo Horizontal.png" alt="logo">
+                    </a>
                 </div>
                 <ul>
                     <li>
@@ -45,7 +47,7 @@
                         </button>
                     </li>
                     <li>
-                        <a href="#ubication">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
                         <a href="aboutus.html">About Us</a>
@@ -58,23 +60,24 @@
                     </li>
                 </ul>
             </div>
-        
+
             <div class="toggle_menu">
                 <ul>
                     <li>
                         <a href="merch.html">Merch</a>
                     </li>
                     <li>
-                        <a href="#">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
                     </li>
                 </ul>
             </div>
+            
         </nav>
     </header>
 
