--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -26,7 +26,7 @@
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <a href="#home">
+                    <a href="index.html#home">
                         <img src="media\img\Logo Horizontal.png" alt="logo">
                     </a>
                 </div>
@@ -37,10 +37,10 @@
                         </button>
                     </li>
                     <li>
-                        <a href="#">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
@@ -57,10 +57,10 @@
                         <a href="merch.html">Merch</a>
                     </li>
                     <li>
-                        <a href="#">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
