--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -25,7 +25,7 @@
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <a href="#home">
+                    <a href="index.html#home">
                         <img src="media\img\Logo Horizontal.png" alt="logo">
                     </a>
                 </div>
@@ -36,7 +36,7 @@
                         </button>
                     </li>
                     <li>
-                        <a href="#">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
                         <a href="aboutus.html">About Us</a>
@@ -56,10 +56,10 @@
                         <a href="merch.html">Merch</a>
                     </li>
                     <li>
-                        <a href="#">¿Dónde estamos?</a>
+                        <a href="aboutus.html#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
