--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/bf9108fbd8.js" crossorigin="anonymous"></script>
     <!-- Enlaces a CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles_aboutus.css" />
     <!-- Enlaces a JS AOS -->
     <script src="js/aos.js"></script>
@@ -27,8 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <!-- Enlace a JS -->
-    <script src="js/script_aboutus.js"></script>
+    
 </head>
 
 <body>
