--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -275,12 +275,12 @@
                 </div>         
                 <div class="infofooter">               
                     <div class="footer-section">                   
-                        <h5><b>Build-a-Fit</b></h5>                   
-                        <p><a href="#quienes-somos">Quiénes somos</a></p>                
-                        <p>Build-a-Club</p>                
-                        <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Merchandising</a></p>                  
-                        <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Reservas</a></p>                   
-                        <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>              
+                        <h5><b>Build-a-Fit</b></h5>
+                        <p><a href="#quienes-somos">Quiénes somos</a></p>
+                        <p><a href="index.html">Home</a></p>
+                        <p><a href="merch.html">Merchandising</a></p>
+                        <p>>Reservas</p>
+                        <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>             
                     </div>            
                     <div class="footer-section">                    
                         <h5><b>Ayuda</b></h5>                  
