--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -774,9 +774,9 @@
                 <div class="footer-section">
                     <h5><b>Build-a-Fit</b></h5>
                     <p><a href="#quienes-somos">Quiénes somos</a></p>
-                    <p>Build-a-Club</p>
-                    <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Merchandising</a></p>
-                    <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Reservas</a></p>
+                    <p><a href="index.html">Home</a></p>
+                    <p><a href="merch.html">Merchandising</a></p>
+                    <p>>Reservas</p>
                     <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>
                 </div>
                 <div class="footer-section">
