--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -776,7 +776,7 @@
                     <p><a href="#quienes-somos">Quiénes somos</a></p>
                     <p><a href="index.html">Home</a></p>
                     <p><a href="merch.html">Merchandising</a></p>
-                    <p>>Reservas</p>
+                    <p>Reservas</p>
                     <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>
                 </div>
                 <div class="footer-section">
