--- a/merch.html
+++ b/merch.html
@@ -773,7 +773,7 @@
             <div class="infofooter">
                 <div class="footer-section">
                     <h5><b>Build-a-Fit</b></h5>
-                    <p><a href="#quienes-somos">Quiénes somos</a></p>
+                    <p><a href="aboutus.html">Quiénes somos</a></p>
                     <p><a href="index.html">Home</a></p>
                     <p><a href="merch.html">Merchandising</a></p>
                     <p>Reservas</p>
